         syntax (Sergio).
20150606 doc/libspectrum.txt: sync with snap_accessors.txt (Stuart).
20150613 m4/ax_create_stdint_h.m4: add AX_CREATE_STDINT_H macro from the GNU
         Autoconf Archive (Stuart).
20150617 Makefile.am,test/Makefile.am: enable silent rules for perl and windres
         commands (Sergio).
20150831 test/turbo-zeropilot.tzx: add mime-type property (Sergio).
20160325 tape_block.c: allow for the possibility that inital_level has the
         default value (Fred).
20160329 timings.c: refactor frame timings (Stuart).
20160410 Makefile.am: revert revision 4731 / bug #262 as it makes configuring
         target flags for cross-compilation difficult (patch #357) (BogDan
         Vatra).
20160424 ChangeLog,README,configure.ac,doc/libspectrum.{3,txt},
         hacking/ChangeLog: merge libspectrum_1_1_0-branch changes onto trunk
         (Fred).
20160427 tape_block.c: fix bugs handling TZX generalised data blocks with empty
         symbol tables (e.g. ZX81 tapes encoded as in the TZX 1.20
         specification) (patch #359) (Andre Leiradella).
20160429 Makefile.am,accessor.pl,autogen.sh,bzip2.c,configure.ac,creator.c,
         crypto.c,csw.c,dck.c,ide.c,internals.h,libspectrum.c,libspectrum.h.in,
         make-perl.c,memory.c,microdrive.c,plusd.c,pzx_read.c,rzx.c,szx.c,
         tape.c,tape_block.c,test/Makefile.am,timings.c,tzx_read.c,
         warajevo_read.c,wav.c,z80.c,z80em.c,zlib.c,zxs.c: have a go at updating
         copyright dates since v 1.1.1 (Fred).
20160430 README,doc/libspectrum.3: list more disk formats (Sergio).
20160501 Makefile.am,memory.c: don't use g_mem_set_vtable on newer GLib and
         distribute missing macro files (Sergio).
20160503 accessor.pl,doc/libspectrum.txt,sna.c,snap_accessors.txt,snapshot.c,
         szx.c,z80.c: add skeleton of support for Currah uSource snapshots
         (patch #363) (Fred and Sergio).
20160508 szx.c: use Opus flags when writing chunk (Sergio).