@@ -200,3 +200,18 @@ int usource_paged
 int usource_custom_rom
 libspectrum_byte* usource_rom 1
 size_t usource_rom_length 1
+
+int disciple_active
+int disciple_paged
+int disciple_inhibit_button
+int disciple_drive_count
+int disciple_custom_rom
+size_t disciple_rom_length 1
+int disciple_direction
+libspectrum_byte disciple_control
+libspectrum_byte disciple_track
+libspectrum_byte disciple_sector
+libspectrum_byte disciple_data
+libspectrum_byte disciple_status
+libspectrum_byte* disciple_rom 1
+libspectrum_byte* disciple_ram 1
