@@ -229,6 +229,21 @@ libspectrum_snap_alloc( void )
   libspectrum_snap_set_usource_rom( snap, 0, NULL );
   libspectrum_snap_set_usource_rom_length( snap, 0, 0 );
 
+  libspectrum_snap_set_disciple_active( snap, 0 );
+  libspectrum_snap_set_disciple_paged( snap, 0 );
+  libspectrum_snap_set_disciple_inhibit_button( snap, 0 );
+  libspectrum_snap_set_disciple_drive_count( snap, 0 );
+  libspectrum_snap_set_disciple_custom_rom( snap, 0 );
+  libspectrum_snap_set_disciple_direction( snap, 0 );
+  libspectrum_snap_set_disciple_control( snap, 0 );
+  libspectrum_snap_set_disciple_track ( snap, 0 );
+  libspectrum_snap_set_disciple_sector( snap, 0 );
+  libspectrum_snap_set_disciple_data  ( snap, 0 );
+  libspectrum_snap_set_disciple_status( snap, 0 );
+  libspectrum_snap_set_disciple_rom( snap, 0, NULL );
+  libspectrum_snap_set_disciple_rom_length( snap, 0, 0 );
+  libspectrum_snap_set_disciple_ram( snap, 0, NULL );
+
   return snap;
 }
 
@@ -279,6 +294,11 @@ libspectrum_snap_free( libspectrum_snap *snap )
 
   if( libspectrum_snap_usource_rom( snap, 0 ) )
     libspectrum_free( libspectrum_snap_usource_rom( snap, 0 ) );
+
+  if( libspectrum_snap_disciple_rom( snap, 0 ) )
+    libspectrum_free( libspectrum_snap_disciple_rom( snap, 0 ) );
+  if( libspectrum_snap_disciple_ram( snap, 0 ) )
+    libspectrum_free( libspectrum_snap_disciple_ram( snap, 0 ) );
 
   libspectrum_free( snap );
 
